syntax = "proto3";

package book;

// Define a message for representing a book
message Book {
  string id = 1;
  string title = 2;
  string description = 3;
}

// Define a message for the request to get a book
message GetBookRequest {
  string book_id = 1;
}

// Define a message for the response when getting a book
message GetBookResponse {
  Book book = 1;
}

// Define the BookService, which has an RPC method to get a book
service BookService {
  rpc GetBook(GetBookRequest) returns (GetBookResponse);
}
